2000-11-08  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin): Use getgroups() to check for membership in
	CVS_ADMIN_GROUP if it exists.  In any event, check the user's
	primary group in addition to any additional groups.
	(Reported by Thomas Okken <TOkken@refco.com>.)

2000-11-06  Jim Meyering  <meyering@lucent.com>

	Compile with gcc's -Wformat and fix the exposed problems.
	* root.c (parse_cvsroot) [! HAVE_KERBEROS]: Provide an argument
	for the %s error format spec.
	[! HAVE_GSSAPI]: Likewise.
	(normalize_cvsroot): Put comment delimiters around token after `#endif'.

2000-11-03  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Some versions of sed require a space between -e and
	the value.

2000-10-27  Larry Jones  <larry.jones@sdrc.com>

	* checkout.c (checkout): Don't check for a safe location if just
	cat'ing the module database.
	(Reported by Ilya Martynov <m_ilya@agava.com>.)
	Have -s set cat as well as status; it simplifies the code.

2000-10-26  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (join-admin-2): Check output from all commands instead
	of (mostly) discarding.  (Some of the tests used to produce stray
	output in remote mode.)

	* sanity.sh (dotest_line_by_line): Handle empty lines in pattern
	(expr doesn't distingish between successfully matching nothing
	and failing to match anything).

	* sanity.sh (dotest_internal): Rearrange and use elif to simplify.

2000-10-24  Jim Meyering  <meyering@lucent.com>

	Fix a bug, introduced with my fix of 2000-07-10, whereby -kk would
	sometimes be ignored for some of the files involved in an update.

	* update.c (join_file): Restore the original value of `options'
	right after calling checkout_file.
	* sanity.sh (join-admin-2): New test for this.

2000-10-23  Derek Price  <derek.price@openavenue.com>
            James Youngman  <jay@gnu.org>

	* sanity.sh: it's /gnu/bin, not /gun/bin.  Thanks go to James Youngman
	<jay@gnu.org> for the bug report and patch.
